--- a/index.html
+++ b/index.html
@@ -4,30 +4,42 @@
 <head> <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
   <link href="stylesheet.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" href="fox.jpg"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <title>Welcome to Google homepage!</title> 
 </head> 
 
 <body> 
-<!--  Top Nav Bar  
+
   <div class="topnav">
     <a href="https://www.google.com/">About</a>
     <a href="https://www.google.com/">Store</a>
     <a href="https://www.google.com/">Gmail</a>
     <a href="https://www.google.com/">Images</a>
-    <img src="waffle.png" height ="42" width="42" alt="menu en gauffre">
-    <img src="account.png" height ="42" width="42" alt="compte">
+    <img src="waffle.png" height ="21" width="21" alt="menu en gauffre">
+    <img src="account.png" height ="21" width="21" alt="compte">
   </div>
--->  
+ 
   <div class="centre-stage">
-    <div class="img">
-      <img src="Google_image.png">
-    </div>
-    <div class="searchbar">
-      <form class="example" action="action_page.php">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-    </div>
+
+    <img id="img" src="Google_image.png">
+
+    <form class="search-form" action="action_page.php">
+
+      <input type="text" name="search">
+
+      <div class="buttons">
+
+        <button type="submit" class="search">Google search</i></button>
+
+        <span class="a"></span>
+
+        <button type="submit" class="lucky">I'm feeling lucky</button>
+
+      </div>
+
+    </form>      
+
+
   </div> 
 </body> 
 </html> 
