TopNav Part is now done.
Added a few elements to centre.

Onto bottom part.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,29 @@
 
 <body> 
 
-  <div class="topnav">
-    <a href="https://www.google.com/">About</a>
-    <a href="https://www.google.com/">Store</a>
-    <a href="https://www.google.com/">Gmail</a>
-    <a href="https://www.google.com/">Images</a>
-    <img src="waffle.png" height ="21" width="21" alt="menu en gauffre">
-    <img src="account.png" height ="21" width="21" alt="compte">
-  </div>
+<!--  <div class="topnav"> -->
+  
+    <div class="about">
+			<a class="about" href="https://www.google.com/">About</a>
+  	</div>
+  	
+    <div class="store">
+	    <a class="store" href="https://www.google.com/">Store</a>
+  	</div>
+
+    <div class="gmail">
+	    <a class="gmail" href="https://www.google.com/">Gmail</a>
+		</div>
+
+    <div class="images">
+  	  <a class="images" href="https://www.google.com/">Images</a>
+	  </div>
+	  
+		<img class="gauffre" src="waffle.png">
+	  
+  	<img class="account" src="fox.jpg">
+  
+<!--  </div> -->
  
   <div class="centre-stage">
 
@@ -25,7 +40,7 @@
 
     <form class="search-form" action="action_page.php">
 
-      <input type="text" name="search">
+      <input class="text" type="text" name="search">
 
       <div class="buttons">
 
@@ -39,7 +54,7 @@
 
     </form>      
 
-
   </div> 
+
 </body> 
 </html> 
